Fix Filter Bar -> Pill alignment issues

--- a/src/data-publication/ChangeLog/ChangeLogTable.css
+++ b/src/data-publication/ChangeLog/ChangeLogTable.css
@@ -29,6 +29,7 @@
 
 #ChangeLogTable .result-count img {
   height: 25px;
+  width: 25px;
   margin-right: 1rem;
 }
 
